RESOLVED FIXED242817
Align XHR aborting with the specification and other browser engines
https://bugs.webkit.org/show_bug.cgi?id=242817
Summary Align XHR aborting with the specification and other browser engines
Chris Dumez
Reported 2022-07-15 13:37:53 PDT
Align XHR aborting with the specification and other browser engines: - window.stop() should cause an abort event to get fired - The abort event should get fired asynchronously
Attachments
Chris Dumez
Comment 1 2022-07-15 13:41:01 PDT
Alexey Proskuryakov
Comment 2 2022-07-15 16:30:32 PDT
Surprised that we
EWS
Comment 3 2022-07-19 12:30:37 PDT
Committed 252611@main (74337e4bd0b1): <https://commits.webkit.org/252611@main> Reviewed commits have been landed. Closing PR #2467 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2022-07-19 12:31:17 PDT
Chris Dumez
Comment 5 2022-11-10 09:52:00 PST
Chris Dumez
Comment 6 2022-11-10 09:52:03 PST
Re-opening for pull request https://github.com/WebKit/WebKit/pull/6352
EWS
Comment 7 2022-11-11 13:10:44 PST
Committed 256586@main (b37371177a8c): <https://commits.webkit.org/256586@main> Reviewed commits have been landed. Closing PR #6352 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.