Align XHR aborting with the specification and other browser engines https://bugs.webkit.org/show_bug.cgi?id=242817

Reviewed by Geoffrey Garen.

Align XHR aborting with the specification and other browser engines:
- window.stop() should cause an abort event to get fired
- The abort event should get fired asynchronously

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/xhr/abort-after-stop.window-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/xhr/open-after-stop.window-expected.txt:
* Source/WebCore/loader/FrameLoader.cpp:
(WebCore::FrameLoader::requestFromDelegate):
(WebCore::FrameLoader::blockedError const):
* Source/WebCore/xml/XMLHttpRequest.cpp:
(WebCore::XMLHttpRequest::XMLHttpRequest):
(WebCore::XMLHttpRequest::open):
(WebCore::XMLHttpRequest::abort):
(WebCore::XMLHttpRequest::internalAbort):
(WebCore::XMLHttpRequest::abortError):
(WebCore::XMLHttpRequest::didFail):
* Source/WebCore/xml/XMLHttpRequest.h:

Canonical link: https://commits.webkit.org/252611@main